--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-pdf": "^10.3.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
