feat: notification packege

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev-with-sw": "npm run gen-sw && next dev",
     "dev-https": "next dev --experimental-https",
     "gen-sw": "node ./scripts/generate-sw.js",
-    "prebuild": "node ./scripts/generate-sw.js",
-    "build": "next build",
+    "build": "npm run gen-sw && next build",
     "start": "next start",
     "lint": "eslint"
   },
