chore: push notification both in background & foreground

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev-with-sw": "npm run gen-sw && next dev",
     "dev-https": "next dev --experimental-https",
     "gen-sw": "node ./scripts/generate-sw.js",
-    "build": "npm run gen-sw && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
